[tool.poetry]
name = "python-streamlit-contract"
version = "0.1.0"
description = ""
authors = ["Philip Hoyos <philiphoyos@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.37.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
